--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -121,10 +121,12 @@ body{
 	font-family: $ff_default;
 	font-size: fz_sm(19px);
 	line-height: 1;
-	background-color: $semidark;
+	background: $semidark url(../img/bg_intro_sm.svg) no-repeat top right;
+	background-size: 100% auto;
 	color: white;
 	@media ($is_landscape) {
 		font-size: fz_lg(19px);
+		background-image: url(../img/bg_intro.svg);
 	}
 }
 p{
@@ -161,11 +163,15 @@ p{
 	&--lg{
 		font-size: fz_sm(36px);
 		line-height: fz_sm(50.4px);
+		margin-bottom: size_sm(16px);
 	}
 	@media ($is_landscape) {
+		font-size: fz_lg(24px);
+		line-height: fz_lg(70.8px);
 		&--lg{
 			font-size: fz_lg(60px);
 			line-height: fz_lg(70.8px);
+			margin-bottom: size_lg(64px);
 		}
 	}
 }
@@ -178,7 +184,7 @@ p{
 	letter-spacing: -1.5%;
 	color: white;
 	border-radius: size_sm(3px);
-	border: 1px solid $teal;
+	border: size_sm(1px) solid $teal;
 	background-color: transparent;
 	&,
 	&:hover{
@@ -193,8 +199,22 @@ p{
 	}
 	&--gray{
 		border-color: $gray;
-		// background-color: $teal;
-		// color: $teal;
+	}
+	@media ($is_landscape) {
+		max-width: size_lg(300px);
+		padding: size_lg(17px) size_lg(3px);
+		font-size: fz_lg(17px);
+		border-radius: size_lg(3px);
+		border-width: size_lg(1px);
+		&__box{
+			display: flex;
+			justify-content: flex-start;
+			align-items: center;
+			> *{
+				flex: 1 1 auto;
+				margin-right: size_lg(24px);
+			}
+		}
 	}
 }
 .nav{
@@ -202,6 +222,14 @@ p{
 }
 .panel{
 	padding-bottom: 0;
+	&__inner{
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		> *{
+			flex: 0 0 auto;
+		}
+	}
 }
 	.logo{
 		&__box{
@@ -210,8 +238,19 @@ p{
 			margin-top: size_sm(77px - 32px);
 		}
 		margin-right: size_sm(91px - 74px);
+		img{
+			width: size_sm(56px);
+			height: size_sm(63px);	
+		}
 		@media ($is_landscape) {
-			
+			&__box{
+				margin: 0;
+			}
+			margin-right: size_lg(36px - 19px);
+			img{
+				width: size_lg(56px);
+				height: size_lg(63px);
+			}
 		}
 	}
 	.heading{
@@ -221,6 +260,7 @@ p{
 		margin: 0;
 		@media ($is_landscape) {
 			font-size: fz_lg(19px);
+			line-height: fz_lg(26.6px);
 		}
 	}
 
@@ -231,31 +271,67 @@ p{
 		line-height: fz_sm(40.8px);
 		margin-bottom: 0;
 	}
+	@media ($is_landscape) {
+		padding-top: size_lg(200px - 171px);
+		.title{
+			font-size: fz_lg(58px);
+			line-height: fz_lg(60.8px);
+			margin-bottom: fz_lg(12px);
+		}
+		&__grid{
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+		}
+	}
 }
 	.hashtag{
 		font-family: $ff_mono;
 		font-size: fz_sm(16px);
 		text-transform: uppercase;
 		margin: 0;
+		@media ($is_landscape) {
+			font-size: fz_lg(15px);
+		}
 	}
 	.datebox{
-		display: flex;
-		justify-content: center;
-		align-items: center;
+		position: relative;
+		width: size_sm(177px);
 		height: size_sm(201px);
-		font-family: $ff_mono;
-		font-size: fz_sm(35px);
-		color: $yellow;
+		margin: size_sm(24px) auto;
+		&__inner{
+			position: absolute;
+			left: 0;
+			right: 0;
+			top: 0;
+			bottom: 0;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			font-family: $ff_mono;
+			font-size: fz_sm(35px);
+			color: $yellow;
+		}
+		@media ($is_landscape) {
+			width: size_lg(237px);
+			height: size_lg(269px);
+			margin-right: size_lg(1088px - 959px);
+			&__inner{
+				font-size: fz_lg(35px);
+			}
+		}
 	}
 
 .broadcast{
+	background-color: $dark;
 	&__about,
 	&__box{
 		padding: size_sm(16px);
-		border: 1px solid $gray;
+		border: size_sm(1px) solid $gray;
 	}
 	&__about{
 		font-size: fz_sm(24px);
+		line-height: 140%;
 		color: $teal;
 
 		// REMOVE !!!
@@ -268,8 +344,70 @@ p{
 	&__panel{
 		font-size: fz_sm(16px);
 	}
+	&__info{
+		line-height: 140%;
+	}
+	&__caption{
+		color: $teal;
+		border-bottom: size_sm(1px) solid $gray;
+		padding-bottom: size_sm(16px);
+		margin-bottom: size_sm(16px);
+	}
+	&__video{
+		margin: size_sm(24px) auto size_sm(16px);
+	}
 	&__select{
-		font-size: fz_sm(12px);
+	    position: relative;
+	    width: 100%;
+		select {
+			position: relative;
+			z-index: 2;
+			font: normal fz_sm(12px)/1 $ff_default;
+			display: inline-block;
+			width: 100%;
+			cursor: pointer;
+			padding: size_sm(10px) size_sm(20px) size_sm(10px) size_sm(5px);
+			outline: 0;
+			border: size_sm(1px) solid $gray;
+			border-radius: 0;
+			background-color: transparent;
+			color: white;
+			-webkit-appearance: none;
+			appearance: none;
+			&::-ms-expand { display: none; }
+			&:disabled {
+				opacity: 0.5;
+				pointer-events: none;
+				& ~ .select__arrow {
+					border-top-color: $teal;
+				}
+			}
+		}
+		option{
+			color: black;
+		}
+		.select__arrow {
+			position: absolute;
+			top: 0;
+			right: 0;
+			width: size_sm(32px);
+			height: 100%;
+			background-color: transparent;
+			&:before{
+				content: '';
+				display: block;
+				position: absolute;
+				top: size_sm(12px);
+				right: size_sm(12px);
+				width: size_sm(8px);
+				height: size_sm(8px);
+				border: solid $teal;
+				border-width: 0 size_sm(2px) size_sm(2px) 0;
+				-webkit-transform: rotate(45deg);
+				-ms-transform: rotate(45deg);
+				transform: rotate(45deg);
+			}
+		}
 	}
 	p{
 		line-height: fz_sm(22.4px);
@@ -277,21 +415,128 @@ p{
 	&__time{
 		color: $yellow;
 	}
-	// &__label,
-	// &__time{
-	// 	margin-bottom: size_sm(20px);
-	// }
 	.btn{
 		display: block;
 		margin-top: size_sm(16px);
+		border-radius: 0;
+	}
+	@media ($is_landscape) {
+		position: relative;
+		&::before{
+			content: '';
+			position: absolute;
+			top: size_lg(-24px);
+			right: size_lg(64px);
+			display: block;
+			width: size_lg(193px);
+			height: size_lg(169px);
+			background-image: url(../img/bg_broadcast.svg);
+			background-position: center;
+			background-size: 100% auto;
+		}
+		&__about{
+			border-width: size_lg(1px);
+		}
+		&__box{
+			position: relative;
+			padding: size_lg(32px);
+			display: flex;
+			justify-content: flex-start;
+			border-width: size_lg(1px);
+			> *{
+				flex: 0 0 auto;
+			}
+			&::after{
+				content: '';
+				display: block;
+				position: absolute;
+				left: size_lg(738px - 64px);
+				top: 0;
+				width: size_lg(1px);
+				bottom: 0;
+				background-color: $gray;
+			}
+		}
+		&__panel{
+			margin-left: size_lg(802px - 738px);
+			width: size_lg(230px);
+		}
+		&__player{
+			max-width: size_lg(738px - 96px);
+			padding-right: size_lg(738px - 706px);
+			box-sizing: border-box;
+		}
+		&__video{
+			margin: size_lg(73px - 54px) 0;
+		}
+		&__select{
+			max-width: size_lg(150px);
+			margin-left: auto;
+			select {
+				font-size: fz_lg(12px);
+				padding: size_lg(10px) size_lg(20px) size_lg(10px) size_lg(5px);
+				border: none;
+			}
+			.select__arrow {
+				width: size_lg(32px);
+				&:before{
+					top: size_lg(12px);
+					right: size_lg(12px);
+					width: size_lg(8px);
+					height: size_lg(8px);
+					border-width: 0 size_lg(2px) size_lg(2px) 0;
+				}
+			}
+		}
+		&__about{
+			font-size: fz_lg(32px);
+			margin-top: size_lg(58px - 25px);
+
+			// REMOVE !!!
+
+			p{
+				padding-top: 0;
+				padding-bottom: size_lg(267px - 108px);
+				max-width: size_lg(540px);
+			}
+		}
+		&__caption{
+			border-width: size_lg(1px);
+			padding-bottom: size_lg(16px);
+			margin-bottom: size_lg(16px);
+		}
+		&__label:first-child{
+			margin-top: 0;
+		}
+		&__label,
+		&__time,
+		&__next{
+			font-size: fz_lg(16px);
+		}
+		&__caption{
+			font-size: fz_lg(18px);
+		}
+		p{
+			line-height: fz_lg(22.4px);
+		}
+		.btn{
+			margin-top: size_lg(12px);
+			&:first-of-type{
+				margin-top: size_lg(60px);
+			}
+		}
 	}
 }
+
 .program{
+	background: url(../img/bg_program.svg) no-repeat;
+	background-position: size_sm(234px) 0;
+	background-size: size_sm(70px) auto;
 	font-size: fz_sm(24px);
 	line-height: fz_sm(33.6px);
 	&__row{
 		padding: size_sm(32px) 0;
-		border-bottom: 1px solid $gray;
+		border-bottom: size_sm(1px) solid $gray;
 		p{
 			margin-bottom: fz_sm(19px);
 			&:last-child{
@@ -311,12 +556,16 @@ p{
 		font-size: fz_sm(19px);
 	}
 	@media ($is_landscape) {
+		background-image: url(../img/bg_program.svg);
+		background-position: size_lg(984px) size_lg(251px - 193px);
+		background-size: size_lg(98px) auto;
 		font-size: fz_lg(32px);
 		line-height: fz_lg(40.8px);
 		&__row{
 			display: flex;
 			justify-content: flex-start;//space-between;
 			padding: size_lg(909px - 866px) 0;
+			border-width: size_lg(1px);
 			p{
 				margin-bottom: fz_lg(19px);
 			}
@@ -340,12 +589,8 @@ p{
 		max-width: size_sm(180px);
 		margin: 0 auto size_sm(50px - 34px);
 		img{
-			max-width: 100%;
-		// 	opacity: 0;
-		// 	position: absolute;
-		// }
-		// canvas{
-		// 	max-width: 100%;
+			width: size_sm(180px);
+			height: size_sm(203px);
 		}
 	}
 	&__name{
@@ -375,6 +620,10 @@ p{
 			flex: 0 0 auto;
 			max-width: size_lg(180px);
 			margin: 0 size_lg(87px - 56px) 0 0;
+			img{
+				width: size_lg(180px);
+				height: size_lg(203px);
+			}
 		}
 		&__data{
 			flex: 0 0 auto;
@@ -401,11 +650,15 @@ p{
 		line-height: fz_sm(40.8px);
 		padding: size_sm(8px) 0;
 		// padding: size_sm(32px) 0;
-		border-bottom: 1px solid $gray;
+		border-bottom: size_sm(1px) solid $gray;
 		a{
 			text-decoration: none;
 			color: white;
 		}
+	}
+	&__icon img{
+		width: size_sm(37px);
+		height: size_sm(37px);
 	}
 	&__title,
 	&__speaker{
@@ -434,14 +687,25 @@ p{
 		}
 	}
 	@media ($is_landscape) {
+		background: url(../img/bg_materials.svg) no-repeat;
+		background-position: size_lg(855px) 0;
+		background-size: size_lg(227px) auto;
+		// &__player{
+		// 	max-width: size_lg(496px);
+		// 	margin-right: size_lg(94px - 62px);
+		// }
 		&__card{
 			display: flex;
-			justify-content: space-between;
+			justify-content: flex-start;//space-between;
 			padding: size_lg((150px - 79px) / 2) 0;
 			> *{
 				flex: 0 0 50%;
-				max-width: size_lg(498px);
+				&:first-child{
+					margin-right: size_lg(94px - 62px);
+					max-width: size_lg(496px);
+				}
 				&:last-child{
+					max-width: size_lg(370px);
 					display: flex;
 					flex-direction: column;
 					justify-content: center;
@@ -454,6 +718,10 @@ p{
 			line-height: fz_lg(40.8px);
 			padding: size_lg(24px) 0 0;
 			border: none;
+		}
+		&__icon img{
+			width: size_lg(37px);
+			height: size_lg(37px);
 		}
 		&__title,
 		&__speaker{
@@ -474,13 +742,23 @@ p{
 	}
 }
 
-.location{
-	
+.publications{
+	@media ($is_landscape) {
+		position: relative;
+		&::before{
+			content: '';
+			position: absolute;
+			top: -25%;
+			right: 0;
+			display: block;
+			width: size_lg(464px);
+			height: size_lg(533px);
+			background-image: url(../img/bg_publications.svg);
+			background-position: center;
+			background-size: 100% auto;
+		}
+	}
 }
-// [class*="ymaps-2"][class*="-ground-pane"] {
-// 	filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
-//     filter: grayscale(100%) invert(1) contrast(70%);
-// }
 
 .menu{
 	display: none;
@@ -499,7 +777,7 @@ p{
 		margin-bottom: size_sm(17px);
 	}
 	&__toggle{
-		position: absolute;
+		position: fixed;
 		right: size_sm(16px);
 		top: size_sm(16px);
 		width: size_sm(20px);
@@ -536,8 +814,25 @@ p{
 		}
 	}
 	&__open{
+		overflow: hidden;
 		.menu{
+			position: fixed;
+			left: 0;
+			top: 0;
+			width: 100%;
+			height: 100%;
 			display: flex;
+			justify-content: flex-end;
+			align-items: flex-start;
+			padding-top: size_sm(64px);
+			padding-right: size_sm(16px);
+			box-sizing: border-box;
+			background-color: black;
+			z-index: 100;
+			&__item{
+				text-align: right;
+				font-size: fz_sm(32px);
+			}
 			&__toggle{
 				transition-delay: .6s;
 				transform: rotate(45deg);
@@ -556,6 +851,52 @@ p{
 					&:nth-child(3){
 						transform: translateY( size_sm(-7px) ) rotate(90deg);
 					}
+				}
+			}
+		}
+	}
+	@media ($is_landscape) {
+		&__toggle{
+			position: fixed;//relative;
+			margin: 0;
+			flex: 0 0 auto;
+			top: auto;
+			right: size_lg(64px);//0;
+			width: size_lg(28px);
+			height: size_lg(21px);
+			span {
+				height: size_lg(1px);
+				&:nth-child(2){
+					margin-top: size_lg(-.5px);
+				}
+			}
+		}
+		&__open{
+			.menu{
+				padding-top: size_lg(180px);
+				padding-right: size_lg(64px);
+				&__item{
+					font-size: fz_lg(64px);
+					margin-bottom: size_lg(48px);
+				}
+				&__toggle{
+					span{
+						&:nth-child(1){
+							transform: translateY( size_lg(13px) );
+						}
+						&:nth-child(3){
+							transform: translateY( size_lg(-7px) ) rotate(90deg);
+						}
+					}
+				}
+			}
+		}
+	}
+	@media ($is_landscape) and (min-aspect-ratio: 2 / 1) {
+		&__open{
+			.menu{
+				&__item{
+					margin-bottom: size_lg(18px);
 				}
 			}
 		}
@@ -579,7 +920,8 @@ p{
 		font-size: fz_sm(17px);
 		text-align: center;
 		padding: size_sm(61px - 34px) 0;
-		border: 1px solid black;
+		margin: size_sm(61px - 34px) 0;
+		border: size_sm(1px) solid black;
 		border-left: none;
 		border-right: none;
 		p{
@@ -607,15 +949,89 @@ p{
 		font-size: fz_sm(19px);
 		color: $gray;
 		text-align: center;
+		margin: 0;
 	}
 	.menu__item{
 		font-size: fz_sm(17px);
-		a{
-
+	}
+	@media ($is_landscape) {
+		padding: size_lg(44px) 0;
+		&__row{
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			> *{
+				&:last-child{
+					flex-grow: 1;
+				}
+			}
+		}
+		&__logo{
+			width: size_lg(86px);
+			margin: 0 size_lg(260px - 150px) 0 0;
+		}
+		.menu{
+			&__list{
+				text-align: left;
+				display: flex;
+				align-items: flex-start;
+			}
+			&__item{
+				font-size: fz_lg(17px);
+				margin-right: size_lg(32px);
+				margin-bottom: 0;
+			}
+		}
+		&__contacts{
+			font-size: fz_lg(19px);
+			text-align: left;
+			padding: size_lg(61px - 34px) 0;
+			margin: size_lg(38px) 0;
+			border-width: size_lg(1px);
+			p{
+				&:last-child{
+					display: flex;
+				}
+			}
+			a{
+				font-size: fz_lg(19px);
+				display: inline-block;
+				margin-right: size_lg(547px - 473px);
+				&.footer__facebook{
+					margin: 0;
+				}
+			}
+			br{
+				display: none;
+			}
+		}
+		&__facebook{
+			display: inline-flex !important;
+			img{
+				width: size_lg(40px);
+				height: size_lg(40px);
+				margin-right: size_lg(41px - 26px);
+			}
+		}
+		&__url{
+			font-size: fz_lg(17px);
+			text-align: left;
 		}
 	}
 }
 
+// .video-js{
+// 	iframe{
+// 		z-index: 2;
+// 	}
+// }
+.vjs-big-play-centered .vjs-big-play-button,
+.vjs-big-play-centered .vjs-big-play-button:hover,
+.video-js:hover .vjs-big-play-button,
+.video-js .vjs-big-play-button:focus{
+	border-color: transparent;
+	background-color: transparent;
+}
 
 
 
