Some improvments done

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -115,9 +115,9 @@ html(lang="ru")
 						p.broadcast__time 10:15
 						p.broadcast__next Название следующего выступления
 						p.broadcast__time 12:30
-						p.broadcast__next Где мы сегодня и что будет завтра?»
-						a.btn.btn--gray(href="#") Спикеры
-						a.btn.btn--gray(href="#") Программа
+						p.broadcast__next Где мы сегодня и что будет завтра?
+						a.btn.btn--gray(href="#speakers") Спикеры
+						a.btn.btn--gray(href="#program") Программа
 
 		.screen.program#program
 			.screen__inner
