Some comments done

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -97,12 +97,9 @@ html(lang="ru")
 				#about-broadcast
 					.broadcast__about
 						h3.title Где и как смотреть трансляцию
-						p.broadcast__info
-							| Конференция пройдет в онлайн-режиме.
-							br
-							| Трансляция будет проходить одновременно на нескольких площадках.
+						p.broadcast__info Трансляция будет проходить одновременно на нескольких площадках.
 						.btn__box
-							a.btn.btn--gray(href="/") conf.mediascope.net
+							a.btn.btn--gray(href="/") Сайт конференции
 							br
 							a.btn.btn--gray(href="https://business.facebook.com/events/811737422923199/" target="_blank") Facebook
 
@@ -206,7 +203,6 @@ html(lang="ru")
 									| директор по специальным
 									br
 									| исследованиям Mediascope
-					.speakers__row
 						.speakers__card
 							.speakers__photo
 								img(src="img/speakers/m_zotov.png" alt="")
@@ -271,7 +267,7 @@ html(lang="ru")
 								br
 								a(href="mailto:CONF2020@MEDIASCOPE.NET") CONF2020@MEDIASCOPE.NET
 								br
-								a.footer__facebook(href="//business.facebook.com/events/811737422923199/" target="_blank") 
+								a.footer__facebook(href="//www.facebook.com/MediascopeRu" target="_blank") 
 									img(src="img/fb.svg" alt="")
 									span Подпишись
 						p.footer__url conf.mediascope.net
