Comments from 10.11.20 done

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -87,13 +87,18 @@ html(lang="ru")
 
 		.screen.about
 			.screen__inner
-				h2.title О конференции
+				h2.title.title--lg О конференции
 				p.
-					Ежегодно мы приглашаем вас, наших уважаемых клиентов, встретиться с нами и обсудить текущие проекты компании, задачи на предстоящий год, обменяться мнениями о состоянии рекламной и исследовательской индустрии. Мы подробно и с большим удовольствием делимся с вами новостями о каждом из направлений исследований, подводим итоги года и анонсируем планы по развитию.
-				p
-					strong В этом году наша конференция состоится в онлайн-формате. Посмотреть трансляцию вы сможете по предварительной регистрации.
-				p
-					strong Ждем вас 1 декабря 2020 года!
+					2020 год для всех особенный. Технологическая трансформация стала одной из стратегически важных составляющих для большинства компаний и бизнесов.
+				p.
+					За этот год мы сделали многое для того, чтобы наши клиенты смогли в будущем строить свой бизнес и принимать решения на основе синтеза огромного опыта Mediascope в медиаисследованиях и лучших технологий в области работы с данными. 
+				p.
+					Мы будем рады подробнее рассказать об этом на нашей конференции 1 декабря <nobr>2020 года</nobr>.
+
+				p.
+					В этом году наше мероприятие состоится в онлайн-формате. Посмотреть трансляцию вы сможете по предварительной регистрации.
+				p.
+					До встречи 1 декабря!
 				#about-broadcast
 					.broadcast__about
 						h3.title Где и как смотреть трансляцию
@@ -134,20 +139,45 @@ html(lang="ru")
 				h2.title.title--lg Программа
 				.program__table
 					.program__row
-						.program__time 10:00 - 18:00
-						.program__speech Сбор гостей, регистрация, welcome
-					.program__row
-						.program__time 10:00 - 18:00
+						.program__time 11:00 - 11:10
 						.program__speech
-							p Деловая программа.
-							p.color--teal The power of data knowledge
-							p.program__small Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+							p Приветственное слово
+							p.program__small
+								| Руслан Тагиев,
+								br
+								span.color--teal Генеральный директор Mediascope
 					.program__row
-						.program__time 10:00 - 18:00
-						.program__speech The power of data knowledge
+						.program__time 11:10 - 11:30
+						.program__speech
+							p Тренды, вызовы, возможности 2021
+							p.program__small
+								| Ксения Ачкасова,
+								br
+								span.color--teal Исполнительный директор Mediascope
 					.program__row
-						.program__time 10:00 - 18:00
-						.program__speech Завершение мероприятия
+						.program__time 11:30 - 11:50
+						.program__speech
+							p Потребительские предпочтения в новой реальности
+							p.program__small
+								| Марина Пикулева,
+								br
+								span.color--teal Директор по специальным исследованиям Mediascope
+					.program__row
+						.program__time 11:50 - 12:10
+						.program__speech
+							p От классического research <nobr>к технологиям</nobr>
+							p.program__small
+								| Лев Глейзер,
+								br
+								span.color--teal Советник генерального директора Mediascope
+					.program__row
+						.program__time 12:10 - 12:30
+						.program__speech
+							p Продуктовая стратегия Mediascope
+							p.program__small
+								| Михаил Зотов,
+								br
+								span.color--teal Коммерческий директор Mediascope
 
 		.screen.speakers#speakers
 			.screen__inner
@@ -188,9 +218,9 @@ html(lang="ru")
 									br
 									| Пикулева
 								.speakers__vocation
-									| советник генерального
+									| директор по специальным
 									br
-									| директора Mediascope
+									| исследованиям Mediascope
 						.speakers__card
 							.speakers__photo
 								img(src="img/speakers/l_gleizer.png" alt="")
@@ -200,9 +230,9 @@ html(lang="ru")
 									br
 									| Глейзер
 								.speakers__vocation
-									| директор по специальным
+									| советник генерального
 									br
-									| исследованиям Mediascope
+									| директора Mediascope
 						.speakers__card
 							.speakers__photo
 								img(src="img/speakers/m_zotov.png" alt="")
