--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -68,12 +68,9 @@ html(lang="ru")
 				.intro__grid
 					div
 						h2.title
-							span.color--teal The power 
-							span.color--yellow 
-								| of
-								br
-								| data 
-							| knowledge 
+							span.color--teal Data. 
+							span.color--yellow We take it 
+							| personally
 						p.hashtag #Mediascopeсonf
 					div
 						.datebox
