Program and Speakers edited; en page created (bugs here)

--- a/src/pug/en/index.pug
+++ b/src/pug/en/index.pug
@@ -1,16 +1,16 @@
-extends layout.pug
+extends ../layout.pug
 
 block vars
 	- 
-		var lang = "ru"
-		var path = ""
-		var ms_title = "Клиентская Конференция Mediascope 2020"
+		var lang = "en"
+		var path = "../"
+		var ms_title = "Mediascope Clients Conference 2020"
 		var ms_heading = "Mediascope Clients<br>Conference "
-		var ms_nav_item1 = "О Mediascope"
-		var ms_nav_item2 = "Спикеры"
-		var ms_nav_item3 = "Программа"
-		var ms_nav_item4_url = "en/index.html"
-		var ms_nav_item4 = "ENG"
+		var ms_nav_item1 = "About Mediascope"
+		var ms_nav_item2 = "Speakers"
+		var ms_nav_item3 = "Program"
+		var ms_nav_item4_url = "/index.html"
+		var ms_nav_item4 = "РУС"
 		var ms_btn_join = "Регистрация"
 		var ms_btn_manual = "Где и как смотреть трансляцию"
 		var ms_about_title = "О конференции"
@@ -37,5 +37,5 @@ block vars
 		var m_zotov = "Михаил&nbsp;<br>Зотов"
 		var m_zotov_vocation = "коммерческий директор&nbsp;<br>Mediascope"
 
-		var footer_contacts = "ОСТАВАЙТЕСЬ С НАМИ НА СВЯЗИ"
+		var footer_contacts = "GET IN TOUCH"
 		var footer_facebook = "Подпишись"
